--- a/app/build.gradle
+++ b/app/build.gradle
@@ -19,13 +19,13 @@ android {
 }
 
 dependencies {
-    implementation fileTree(dir: 'libs', include: ['*.jar'])
+    implementation fileTree(include: ['*.jar'], dir: 'libs')
     implementation 'com.android.support:appcompat-v7:27.0.2'
     testImplementation 'junit:junit:4.12'
     androidTestImplementation 'com.android.support.test:runner:1.0.2'
     androidTestImplementation 'com.android.support.test.espresso:espresso-core:3.0.2'
-    implementation 'com.github.xuantiandaozun.newtmproject:tianmayunxi:0.0.1-t5'
-    implementation 'com.github.xuantiandaozun.newtmproject:tmhxdl:0.0.1-t5'
-    implementation 'com.github.xuantiandaozun.newtmproject:tianmayunxi02:0.0.1-t6'
-
+    implementation 'com.github.xuantiandaozun.newtmproject:tianmayunxi:0.0.1-t7'
+    //implementation 'com.github.xuantiandaozun.newtmproject:tmhxdl:0.0.1-t5'
+    implementation 'com.github.xuantiandaozun.newtmproject:tianmayunxi02:0.0.1-t7'
+   // implementation project(':tianmayunxi02')
 }
