--- a/tianmayunxi/build.gradle
+++ b/tianmayunxi/build.gradle
@@ -67,8 +67,8 @@ android {
 dependencies {
     implementation fileTree(include: ['*.jar'], dir: 'libs')
     testImplementation 'junit:junit:4.12'
-    implementation 'com.github.xuantiandaozun:baselibrary:0.05'
-    implementation 'com.github.xuantiandaozun:uilibrary:0.01'
+    api 'com.github.xuantiandaozun:baselibrary:0.05'
+    api 'com.github.xuantiandaozun:uilibrary:0.01'
 
     // fresco 图片加载框架
     implementation 'com.facebook.fresco:fresco:1.5.0'
