--- a/tmhxdl/build.gradle
+++ b/tmhxdl/build.gradle
@@ -65,8 +65,8 @@ android {
 dependencies {
     api fileTree(include: ['*.jar'], dir: 'libs')
     testImplementation 'junit:junit:4.12'
-    implementation 'com.github.xuantiandaozun:baselibrary:0.05'
-    implementation 'com.github.xuantiandaozun:uilibrary:0.03'
+    api 'com.github.xuantiandaozun:baselibrary:0.05'
+    api 'com.github.xuantiandaozun:uilibrary:0.03'
     // fresco 图片加载框架
     implementation 'com.facebook.fresco:fresco:1.5.0'
     implementation 'com.jakewharton:butterknife:8.5.1'
