--- a/main/build.gradle
+++ b/main/build.gradle
@@ -113,5 +113,6 @@ dependencies {
 /*        implementation project(':tianmayunxi')
     implementation project(':tianmayunxi02')
     implementation project(':tmhxdl')*/
+    //implementation 'com.github.xuantiandaozun.newtmproject:tmhxdl:0.0.3-t1'
 
 }
