--- a/build.gradle
+++ b/build.gradle
@@ -37,3 +37,41 @@ allprojects {
 task clean(type: Delete) {
     delete rootProject.buildDir
 }
+ext {
+    configuration = [
+            buildToolsVersion: "26.0.2",
+            compileSdkVersion: 26,
+            minSdkVersion    : 19,
+            targetSdk        : 26,
+            versionCode      : 1,
+            versionName      : "0.0.1",
+    ]
+    libraries = [
+            multidex                     : "1.0.1",
+            supportVersion               : "26.1.0",
+            butterknifecompiler          : "8.8.1",
+            butterknife                  : "8.8.1",
+            gson                         : "2.8.2",
+            glide                        : "3.8.0",
+            fragmentation                : "1.3.6",
+            BaseRecyclerViewAdapterHelper: "2.9.42",
+            retrofit                     : "2.3.0",
+            convertergson                : "2.3.0",
+            logginginterceptor           : "3.8.1",
+            converterscalars             : "2.3.0",
+            ultraviewpager               : "1.0.7.0@aar",
+            PhotoView                    : "2.1.3",
+            arouterapi                   : "1.3.1",
+            aroutercompiler              : "1.1.4",
+            matisse                      : "0.5.0-beta3",
+            rxjava                       : "2.0.3",
+            rxjavaadapter                : "1.0.0",
+    ]
+    android = [
+            compileSdkVersion: 26,        //根据自己项目的来配置
+            buildToolsVersion: '26.0.2',  //根据自己项目的来配置
+            targetSdkVersion : 26,        //根据自己项目的来配置
+            supportVersion   : '26.1.0',  //android support version
+            frescoVersion    : '0.14.1'   //fresco的版本，可自行修改
+    ]
+}
