--- a/settings.gradle
+++ b/settings.gradle
@@ -1,1 +1,1 @@
-include ':tianmayunxi', ':tmhxdl', ':tianmayunxi02', ':main'
+include ':tianmayunxi', ':tmhxdl', ':tianmayunxi02', ':main', ':uilibrary', ':base.app'
