--- a/tianmayunxi02/build.gradle
+++ b/tianmayunxi02/build.gradle
@@ -65,8 +65,8 @@ android {
 dependencies {
     api fileTree(include: ['*.jar'], dir: 'libs')
     testImplementation 'junit:junit:4.12'
-    api 'com.github.xuantiandaozun:baselibrary:0.05'
-    api 'com.github.xuantiandaozun:uilibrary:0.01'
+    implementation project(':base.app')
+    implementation project(':uilibrary')
     // fresco 图片加载框架
     implementation 'com.facebook.fresco:fresco:1.5.0'
     implementation 'com.jakewharton:butterknife:8.5.1'
