--- a/tmhxdl/build.gradle
+++ b/tmhxdl/build.gradle
@@ -65,8 +65,6 @@ android {
 dependencies {
     api fileTree(include: ['*.jar'], dir: 'libs')
     testImplementation 'junit:junit:4.12'
-    api 'com.github.xuantiandaozun:baselibrary:0.05'
-    api 'com.github.xuantiandaozun:uilibrary:0.03'
     // fresco 图片加载框架
     implementation 'com.facebook.fresco:fresco:1.5.0'
     implementation 'com.jakewharton:butterknife:8.5.1'
@@ -80,5 +78,7 @@ dependencies {
     implementation 'com.zxy.android:tiny:0.0.6'
     implementation 'com.yuyh.bubble:library:1.0.0'
     implementation 'com.chenlittleping:recyclercoverflow:1.0.6'
-  //  implementation 'android.arch.lifecycle:extensions:1.1.1'
+    //  implementation 'android.arch.lifecycle:extensions:1.1.1'
+    implementation project(':base.app')
+    implementation project(':uilibrary')
 }
