--- a/tianmayunxi/build.gradle
+++ b/tianmayunxi/build.gradle
@@ -67,8 +67,8 @@ android {
 dependencies {
     implementation fileTree(include: ['*.jar'], dir: 'libs')
     testImplementation 'junit:junit:4.12'
-    implementation project(':base.app')
-    implementation project(':uilibrary')
+    api project(':base.app')
+    api project(':uilibrary')
 
     // fresco 图片加载框架
     implementation 'com.facebook.fresco:fresco:1.5.0'
