--- a/tmhxdl/build.gradle
+++ b/tmhxdl/build.gradle
@@ -79,6 +79,6 @@ dependencies {
     implementation 'com.yuyh.bubble:library:1.0.0'
     implementation 'com.chenlittleping:recyclercoverflow:1.0.6'
     //  implementation 'android.arch.lifecycle:extensions:1.1.1'
-    implementation project(':base.app')
-    implementation project(':uilibrary')
+    api project(':base.app')
+    api project(':uilibrary')
 }
