--- a/tianmayunxi/build.gradle
+++ b/tianmayunxi/build.gradle
@@ -67,8 +67,9 @@ android {
 dependencies {
     implementation fileTree(include: ['*.jar'], dir: 'libs')
     testImplementation 'junit:junit:4.12'
-    api project(':base.app')
-    api project(':uilibrary')
+    implementation 'com.github.xuantiandaozun:baselibrary:0.03'
+    implementation 'com.github.xuantiandaozun:uilibrary:0.01'
+    api "com.tenma.ventures:tm_core:1.1.14"
 
     // fresco 图片加载框架
     implementation 'com.facebook.fresco:fresco:1.5.0'
