--- a/tmhxdl/build.gradle
+++ b/tmhxdl/build.gradle
@@ -79,6 +79,8 @@ dependencies {
     implementation 'com.yuyh.bubble:library:1.0.0'
     implementation 'com.chenlittleping:recyclercoverflow:1.0.6'
     //  implementation 'android.arch.lifecycle:extensions:1.1.1'
-    api project(':base.app')
-    api project(':uilibrary')
+    implementation 'com.github.xuantiandaozun:baselibrary:0.03'
+    implementation 'com.github.xuantiandaozun:uilibrary:0.01'
+    api "com.tenma.ventures:tm_core:1.1.14"
+
 }
