--- a/main/build.gradle
+++ b/main/build.gradle
@@ -113,5 +113,9 @@ dependencies {
    /*   implementation project(':tianmayunxi')
     implementation project(':tianmayunxi02')
     implementation project(':tmhxdl')*/
-    //implementation 'com.github.xuantiandaozun.newtmproject:tmhxdl:0.0.3-t7'
+    implementation 'com.github.xuantiandaozun.newtmproject:tmhxdl:0.0.3-t8'
+    implementation 'com.github.xuantiandaozun.newtmproject:tianmayunxi02:0.0.3-t8'
+    implementation 'com.github.xuantiandaozun.newtmproject:tianmayunxi:0.0.3-t8'
+    implementation 'com.github.xuantiandaozun:uilibrary:0.05'
+
 }
