--- a/tianmayunxi/build.gradle
+++ b/tianmayunxi/build.gradle
@@ -67,17 +67,17 @@ android {
 dependencies {
     implementation fileTree(include: ['*.jar'], dir: 'libs')
     testImplementation 'junit:junit:4.12'
-    api 'com.github.xuantiandaozun:baselibrary:0.06'
-    api 'com.github.AriesHoo.UIWidget:widget-core:3.2.6'
-    api 'com.github.AriesHoo.UIWidget:widget-alert:3.2.5'
-    api 'com.github.AriesHoo.UIWidget:widget-collapsing:3.2.5'
+    implementation 'com.github.xuantiandaozun:baselibrary:0.06'
+    implementation 'com.github.AriesHoo.UIWidget:widget-core:3.2.6'
+    implementation 'com.github.AriesHoo.UIWidget:widget-alert:3.2.5'
+    implementation 'com.github.AriesHoo.UIWidget:widget-collapsing:3.2.5'
     //日期选择
-    api('com.github.gzu-liyujiang.AndroidPicker:WheelPicker:1.5.6') {
+    implementation('com.github.gzu-liyujiang.AndroidPicker:WheelPicker:1.5.6') {
         exclude group: 'com.android.support'
     }
     implementation 'com.github.Awent:PhotoPick-Master:v1.095'
-    api 'com.scwang.smartrefresh:SmartRefreshLayout:1.1.0-alpha-14'
-    api 'com.github.1002326270xc:LayoutManager-FlowLayout:v1.4'
+    implementation 'com.scwang.smartrefresh:SmartRefreshLayout:1.1.0-alpha-14'
+    implementation 'com.github.1002326270xc:LayoutManager-FlowLayout:v1.4'
 
     // fresco 图片加载框架
     implementation 'com.facebook.fresco:fresco:1.5.0'
