--- a/tmhxdl/build.gradle
+++ b/tmhxdl/build.gradle
@@ -83,5 +83,6 @@ dependencies {
     implementation 'com.dalong:carrousellayout:1.0.0'
     implementation 'com.chenlittleping:recyclercoverflow:1.0.6'
     implementation 'com.android.support:cardview-v7:25.2.0'
+    implementation 'com.squareup.picasso:picasso:2.71828'
   //  implementation 'android.arch.lifecycle:extensions:1.1.1'
 }
